--- a/.github/workflows/create-feature-branches.yml
+++ b/.github/workflows/create-feature-branches.yml
@@ -3,11 +3,11 @@ name: Create Feature Branches from Tags
 on:
   push:
     tags:
-      - 'v*' # Triggers on version tags like v1.0.0, v2.1.3, etc.
+      - "v*" # Triggers on version tags like v1.0.0, v2.1.3, etc.
   workflow_dispatch:
     inputs:
       tag:
-        description: 'Tag to create branch from'
+        description: "Tag to create branch from"
         required: true
         type: string
 
@@ -17,19 +17,19 @@ jobs:
     permissions:
       contents: write
       pull-requests: write
-    
+
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
+          token: ${{ secrets.ORG_ADMIN_TOKEN || secrets.GITHUB_TOKEN }}
           fetch-depth: 0
-      
+
       - name: Configure Git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "github-actions[bot]@users.noreply.github.com"
-      
+
       - name: Get tag name
         id: get_tag
         run: |
@@ -40,7 +40,7 @@ jobs:
           fi
           echo "tag=$TAG" >> $GITHUB_OUTPUT
           echo "branch_name=features-based-on-$TAG" >> $GITHUB_OUTPUT
-      
+
       - name: Check if branch already exists
         id: check_branch
         run: |
@@ -52,24 +52,24 @@ jobs:
             echo "exists=false" >> $GITHUB_OUTPUT
             echo "Branch $BRANCH_NAME does not exist"
           fi
-      
+
       - name: Create feature branch
         if: steps.check_branch.outputs.exists == 'false'
         run: |
           TAG="${{ steps.get_tag.outputs.tag }}"
           BRANCH_NAME="${{ steps.get_tag.outputs.branch_name }}"
-          
+
           # Create branch from the tag
           git checkout -b "$BRANCH_NAME" "$TAG"
           git push origin "$BRANCH_NAME"
-          
+
           echo "Created branch: $BRANCH_NAME from tag: $TAG"
-      
+
       - name: Set branch protection rules
         if: steps.check_branch.outputs.exists == 'false'
         run: |
           BRANCH_NAME="${{ steps.get_tag.outputs.branch_name }}"
-          
+
           # Use GitHub CLI to set branch protection rules
           gh api repos/${{ github.repository }}/branches/"$BRANCH_NAME"/protection \
             --method PUT \
@@ -83,36 +83,47 @@ jobs:
             }
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Create issue for new branch
         if: steps.check_branch.outputs.exists == 'false'
         run: |
           TAG="${{ steps.get_tag.outputs.tag }}"
           BRANCH_NAME="${{ steps.get_tag.outputs.branch_name }}"
-          
+
+          # Create issue body
+          cat > issue_body.md << 'EOF'
+          A new feature branch has been automatically created.
+
+          ## Branch Details
+          - **Tag**: $TAG
+          - **Branch**: $BRANCH_NAME
+          - **Purpose**: Feature development based on $TAG
+
+          ## Important Notes
+          - All changes should be made via Pull Requests to this branch
+          - Direct pushes to this branch are discouraged
+          - Please follow the established naming conventions for PRs
+
+          ## Next Steps
+          1. Create feature branches from this branch for specific features
+          2. Submit PRs targeting this branch
+          3. Ensure proper code review before merging
+          EOF
+
+          # Replace variables in the issue body
+          sed -i "s/\$TAG/$TAG/g" issue_body.md
+          sed -i "s/\$BRANCH_NAME/$BRANCH_NAME/g" issue_body.md
+
           gh issue create \
             --title "New feature branch created: $BRANCH_NAME" \
-            --body "A new feature branch \`$BRANCH_NAME\` has been automatically created based on tag \`$TAG\`.
-
-## Branch Details
-- **Tag**: \`$TAG\`
-- **Branch**: \`$BRANCH_NAME\`
-- **Purpose**: Feature development based on $TAG
-
-## Important Notes
-- All changes should be made via Pull Requests to this branch
-- Direct pushes to this branch are discouraged
-- Please follow the established naming conventions for PRs
-
-## Next Steps
-1. Create feature branches from this branch for specific features
-2. Submit PRs targeting this branch
-3. Ensure proper code review before merging" \
+            --body-file issue_body.md \
             --label "automation,new-branch"
+            
+          rm issue_body.md
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-      
+
       - name: Skip if branch exists
         if: steps.check_branch.outputs.exists == 'true'
         run: |
-          echo "Branch ${{ steps.get_tag.outputs.branch_name }} already exists. Skipping creation." 
+          echo "Branch ${{ steps.get_tag.outputs.branch_name }} already exists. Skipping creation."
